Change Rest API. Added exception handler.
