# src/main/java/ru/tsystems/devschool/controller/delegate/ControllerExceptionHandler.java
@@ -1,0 +1,88 @@
+package ru.tsystems.devschool.controller.delegate;
+
+import org.springframework.beans.TypeMismatchException;
+import org.springframework.core.NestedExceptionUtils;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.MissingPathVariableException;
+import org.springframework.web.bind.MissingServletRequestParameterException;
+import org.springframework.web.bind.ServletRequestBindingException;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.multipart.support.MissingServletRequestPartException;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+import ru.tsystems.devschool.model.ErrorDto;
+
+@ControllerAdvice
+public class ControllerExceptionHandler extends ResponseEntityExceptionHandler {
+
+    @ExceptionHandler(value = {DataIntegrityViolationException.class})
+    public ResponseEntity<Object> handleException(DataIntegrityViolationException e) {
+        ErrorDto error = new ErrorDto();
+        error.setError(ErrorDto.ErrorEnum.CONFLICT);
+        error.setErrorDescription(NestedExceptionUtils.getMostSpecificCause(e).getMessage());
+        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+    }
+
+    @ExceptionHandler(value = {Exception.class})
+    public ResponseEntity<Object> handleException(Exception e) {
+        ErrorDto error = new ErrorDto();
+        error.setError(ErrorDto.ErrorEnum.INTERNAL_SERVER_ERROR);
+        error.setErrorDescription(NestedExceptionUtils.getMostSpecificCause(e).getMessage());
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers,
+        HttpStatus status, WebRequest request) {
+        return handleError(ex);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleMissingServletRequestParameter(MissingServletRequestParameterException ex,
+        HttpHeaders headers, HttpStatus status, WebRequest request) {
+        return handleError(ex);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleMissingPathVariable(MissingPathVariableException ex, HttpHeaders headers,
+        HttpStatus status, WebRequest request) {
+        return handleError(ex);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleServletRequestBindingException(ServletRequestBindingException ex,
+        HttpHeaders headers, HttpStatus status, WebRequest request) {
+        return handleError(ex);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleTypeMismatch(TypeMismatchException ex, HttpHeaders headers, HttpStatus status,
+        WebRequest request) {
+        return handleError(ex);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex, HttpHeaders headers,
+        HttpStatus status, WebRequest request) {
+        return handleError(ex);
+    }
+
+    @Override
+    protected ResponseEntity<Object> handleMissingServletRequestPart(MissingServletRequestPartException ex,
+        HttpHeaders headers, HttpStatus status, WebRequest request) {
+        return handleError(ex);
+    }
+
+    private ResponseEntity<Object> handleError(Exception ex) {
+        ErrorDto error = new ErrorDto();
+        error.setError(ErrorDto.ErrorEnum.BAD_REQUEST);
+        error.setErrorDescription(NestedExceptionUtils.getMostSpecificCause(ex).getMessage());
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+    }
+}
